tests/errors/sem.no-match.arr-size.or
main :: () -> void {
    T :: (a: [!u]int) {
        return;
    };

    T(10);
};
